--- a/references.bib
+++ b/references.bib
@@ -1,45 +1,82 @@
-@article{ref:mnih2013playing,
-  title   = {Playing atari with deep reinforcement learning},
-  author  = {Mnih, Volodymyr and Kavukcuoglu, Koray and Silver, David and Graves, Alex and Antonoglou, Ioannis and Wierstra, Daan and Riedmiller, Martin},
-  journal = {arXiv preprint arXiv:1312.5602},
-  year    = {2013}
+@article{blackman2016ambient,
+  title={Ambient assisted living technologies for aging well: a scoping review},
+  author={Blackman, Stephanie and Matlo, Claudine and Bobrovitskiy, Charisse and Waldoch, Ashley and Fang, Mei Lan and Jackson, Piper and Mihailidis, Alex and Nyg{\aa}rd, Louise and Astell, Arlene and Sixsmith, Andrew},
+  journal={Journal of Intelligent Systems},
+  volume={25},
+  number={1},
+  pages={55--69},
+  year={2016},
+  publisher={De Gruyter}
 }
 
-@inproceedings{ref:yao2017integrated,
-  title        = {An integrated IMU and UWB sensor based indoor positioning system},
-  author       = {Yao, Leehter and Wu, Yeong-Wei Andy and Yao, Lei and Liao, Zhe Zheng},
-  booktitle    = {2017 International Conference on Indoor Positioning and Indoor Navigation (IPIN)},
-  pages        = {1--8},
-  year         = {2017},
-  organization = {IEEE}
+@article{stodczyk2020ambient,
+  title={Ambient assisted living an overview of current applications, end-users and acceptance},
+  author={Stodczyk, Robert and Uhp, Fischer-Hirchert},
+  journal={Biomedical Journal of Scientific \& Technical Research},
+  volume={30},
+  number={3},
+  pages={23374--23384},
+  year={2020},
+  publisher={Biomedical Research Network+, LLC}
 }
 
-@article{ref:ugarte1992curling,
-  title     = {Curling and closure of graphitic networks under electron-beam irradiation},
-  author    = {Ugarte, Daniel},
-  journal   = {Nature},
-  volume    = {359},
-  number    = {6397},
-  pages     = {707--709},
-  year      = {1992},
-  publisher = {Nature Publishing Group UK London}
+@article{alsina2017homesound,
+  title={homesound: Real-time audio event detection based on high performance computing for behaviour and surveillance remote monitoring},
+  author={Alsina-Pag{\`e}s, Rosa Ma and Navarro, Joan and Al{\'\i}as, Francesc and Herv{\'a}s, Marcos},
+  journal={Sensors},
+  volume={17},
+  number={4},
+  pages={854},
+  year={2017},
+  publisher={MDPI}
 }
 
-@article{ref:nomura2022uwb,
-  title   = {{UWB の測定距離と直接波の減衰度を利用したデバイスフリー複数人屋内測位}},
-  author  = {野村篤史 and 須ヶ﨑聖人 and 坪内孝太 and 西尾信彦 and 下坂正倫 and others},
-  journal = {研究報告ユビキタスコンピューティングシステム (UBI)},
-  volume  = {2022},
-  number  = {1},
-  pages   = {1--8},
-  year    = {2022}
+@article{li2022hybrid,
+  title={A hybrid system of sound event detection transformer and frame-wise model for dcase 2022 task 4},
+  author={Li, Yiming and Guo, Zhifang and Ye, Zhirong and Wang, Xiangdong and Liu, Hong and Qian, Yueliang and Tao, Rui and Yan, Long and Ouchi, Kazushige},
+  journal={arXiv preprint arXiv:2210.09529},
+  year={2022}
 }
 
-@misc{ref:青空文庫Aozo22:online,
-  author       = {},
-  title        = {{青空文庫　Aozora Bunko}},
-  howpublished = {\url{https://www.aozora.gr.jp/}},
-  month        = {},
-  year         = {},
-  note         = {(Accessed on 02/06/2023)}
+@article{schmid2024multi,
+  title={Multi-iteration multi-stage fine-tuning of transformers for sound event detection with heterogeneous datasets},
+  author={Schmid, Florian and Primus, Paul and Morocutti, Tobias and Greif, Jonathan and Widmer, Gerhard},
+  journal={arXiv preprint arXiv:2407.12997},
+  year={2024}
+}
+
+
+@inproceedings{mcmahan2017communication,
+  title={Communication-efficient learning of deep networks from decentralized data},
+  author={McMahan, Brendan and Moore, Eider and Ramage, Daniel and Hampson, Seth and y Arcas, Blaise Aguera},
+  booktitle={Artificial intelligence and statistics},
+  pages={1273--1282},
+  year={2017},
+  organization={PMLR}
+}
+
+
+@article{li2020federated,
+  title={Federated optimization in heterogeneous networks},
+  author={Li, Tian and Sahu, Anit Kumar and Zaheer, Manzil and Sanjabi, Maziar and Talwalkar, Ameet and Smith, Virginia},
+  journal={Proceedings of Machine learning and systems},
+  volume={2},
+  pages={429--450},
+  year={2020}
+}
+
+@inproceedings{karimireddy2020scaffold,
+  title={Scaffold: Stochastic controlled averaging for federated learning},
+  author={Karimireddy, Sai Praneeth and Kale, Satyen and Mohri, Mehryar and Reddi, Sashank and Stich, Sebastian and Suresh, Ananda Theertha},
+  booktitle={International conference on machine learning},
+  pages={5132--5143},
+  year={2020},
+  organization={PMLR}
+}
+
+@article{li2025survey,
+  title={A Survey on Federated Learning in Human Sensing},
+  author={Li, Mohan and Gjoreski, Martin and Barbiero, Pietro and Slapni{\v{c}}ar, Ga{\v{s}}per and Lu{\v{s}}trek, Mitja and Lane, Nicholas D and Langheinrich, Marc},
+  journal={arXiv preprint arXiv:2501.04000},
+  year={2025}
 }
