add SED prior research

--- a/references.bib
+++ b/references.bib
@@ -80,3 +80,24 @@
   journal={arXiv preprint arXiv:2501.04000},
   year={2025}
 }
+
+@article{cornell2024dcase,
+  title={DCASE 2024 task 4: Sound event detection with heterogeneous data and missing labels},
+  author={Cornell, Samuele and Ebbers, Janek and Douwes, Constance and Mart{\'\i}n-Morat{\'o}, Irene and Harju, Manu and Mesaros, Annamaria and Serizel, Romain},
+  journal={arXiv preprint arXiv:2406.08056},
+  year={2024}
+}
+
+@article{yue2024local,
+  title={Local and global features fusion for sound event detection with heterogeneous training dataset and potentially missing labels},
+  author={Yue, Haobo and Wang, Zehao and Mu, Da and Sun, Huamei and Jiang, Yuanyuan and Zhanf, Z and Yin, Jianqin},
+  journal={Detection and Classification of Acoustic Scenes and Events 2024},
+  year={2024}
+}
+
+@article{son2024sound,
+  title={Sound event detection based on auxiliary decoder and maximum probability aggregation for DCASE challenge 2024 task 4},
+  author={Son, Sang Won and Park, Jongyeon and Kim, Hong Kook and Vesal, Sulaiman and Lim, Jeong Eun},
+  journal={arXiv preprint arXiv:2406.12721},
+  year={2024}
+}
